test/visibility/import/relative/import-relative-error1.good
import-relative-error1.chpl:5: error: import must name a module ('x' not a module)
