test/visibility/import/relative/import-relative-error1.chpl
module M {

  var x:int;

  import this.x;
}
